objects/JBCXM__GSCustomerProducts__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__ASV__c</fullName>
        <label>ASV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GS Customer Products</relationshipLabel>
        <relationshipName>GSCustomerProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipName>GS_CustomerProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__GSProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSProduct</label>
        <referenceTo>JBCXM__GSProduct__c</referenceTo>
        <relationshipName>GS_CustomerProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Licensed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__OneTime__c</fullName>
        <label>One Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JBCXM__Users__c</fullName>
        <label>Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>GS Customer Products</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GS Customer Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>